# Enfaria

./: .env  .gitignore  Cargo.toml  README.md  check.sh  native.sh  schema.sql
.github/workflows/: godot.yml  rust.yml
assets/: map.ron
enfaria-common/: Cargo.toml
enfaria-common/src/: command.rs  item.rs  lib.rs  map.rs  message.rs  object.rs  packet.rs  player.rs  position.rs  state.rs  tile.rs
enfaria-common/src/components/: drawable.rs  mod.rs  player.rs  position.rs  sync.rs
enfaria-common/src/systems/: mod.rs  render.rs
enfaria-game/: .env  Cargo.toml  config.cfg  export_presets.cfg  gut.sh  project.godot
enfaria-game/Assets/: blocker.png.import
enfaria-game/Scenes/: MainMenu.tscn  Options.tscn  Player.tscn
enfaria-game/Scripts/: Connection.gd  Env.gd  MainMenu.gd  Options.gd  enfaria_common.gdnlib  enfaria_common.gdns
enfaria-game/addons/gut/: gut_cmdln.gd
enfaria-game/assets/: hoe.png.import  potato_plant_1.png.import  potato_plant_2.png.import  potato_plant_3.png.import  potato_seed.png.import  selected.png.import  unimplemented.png.import  watering_can_empty.png.import  watering_can_full.png.import
enfaria-game/src/: egui.rs  game.gd  game.tscn  main.rs  map.gd  networking.rs  scenes.rs  state.rs  world.rs
enfaria-game/src/global/: class_type.gd  connection.gd  constants.gd  env.gd
enfaria-game/src/maps/: farm.tscn
enfaria-game/src/menu/: controls.gd  controls.tscn  inventory.gd  inventory.tscn  mainmenu.gd  mainmenu.tscn  options.gd  options.tscn  pause.gd  pause.tscn  slot.gd  slot.tscn
enfaria-game/src/native/: enfaria_common.gdnlib  enfaria_common.gdns
enfaria-game/src/objects/: hoe.gd  item.gd  item.tscn  object.gd  plant.gd  potato.gd  potato_plant.gd
enfaria-game/src/objects/items/: hoe.gd  item.gd  potato_seed.gd  watering_can.gd
enfaria-game/src/player/: player.gd  player.tscn
enfaria-game/src/scenes/: game.rs  menu.rs
enfaria-game/src/tiles/: blocker.gd  grass.gd  tile.gd  tile.tscn
enfaria-game/src/ui/: chat.gd  chat.tscn  hotbar.tscn  inventory.gd  inventory.tscn  pause.gd  pause.tscn  slot.gd  slot.tscn
enfaria-game/test/unit/: test_assert.gd
enfaria-server/: Cargo.toml  sqlx-data.json
enfaria-server/src/: connect.rs  data.rs  main.rs  prelude.rs  receive.rs  server.rs  tick.rs
enfaria-server/src/server/: chat.rs  handle_quits.rs  move_items.rs  move_players.rs  ping.rs  ping_players.rs  quit.rs  send_data.rs  sort_data.rs
enfaria-server/templates/: farm.json  farm.toml  player.json  player.toml
enfaria-updater/: Cargo.toml
enfaria-updater/src/: main.rs
enfaria-web/: Cargo.toml  sqlx-data.json
enfaria-web/src/: api.rs  error.rs  index.rs  login.rs  logout.rs  macros.rs  main.rs  prelude.rs  recover.rs  register.rs  release.rs  template.rs
enfaria-web/static/css/: bulma.min.css  style.css
enfaria-web/templates/: base.tera  index.tera  login.tera  navbar.tera  register.tera
scripts/: database.sh  native.sh  release.sh  schema.sql
src/: input.rs  main.rs  scenes.rs  state.rs
src/components/: name.rs
src/data/: map.rs  mod.rs  tile.rs
src/scenes/: game.rs  menu.rs  options.rs  pause.rs
src/systems/: mod.rs  movement.rs  render.rs
