[package]
name = "enfaria-server"
version = "0.1.0"
authors = ["Elinvynia <59487684+Elinvynia@users.noreply.github.com>"]
edition = "2018"

[dependencies]
enfaria-common = { path = "../enfaria-common" }
parking_lot = { version = "0.11", features = ["deadlock_detection"] }
bincode = "1.3"
lazy_static = "1.4"
sqlx = { version = "0.4.2", features = ["runtime-async-std-native-tls", "mysql"] }
async-std = "1.9"
dotenv = "0.15"
log = "0.4"
env_logger = "0.8"
