[package]
name = "enfaria-server"
version = "0.1.0"
authors = ["Elinvynia <59487684+Elinvynia@users.noreply.github.com>"]
edition = "2018"

[dependencies]
async-std = "1.9"
futures = "0.3"
bincode = "1.3"
enfaria-common = { path = "../enfaria-common" }
sqlx = { version = "0.5", features = ["runtime-async-std-native-tls", "mysql", "offline"] }

# Utils
dotenv = "0.15"
lazy_static = "1.4"
parking_lot = { version = "0.11", features = ["deadlock_detection"] }

# Logging
log = "0.4"
env_logger = "0.8"
