[package]
name = "enfaria-web"
version = "0.0.1"
authors = ["Elinvynia <59487684+Elinvynia@users.noreply.github.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
sqlx = { version = "0.4", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }
warp = { version = "0.2", features = ["compression"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
bcrypt = "0.9"
dotenv = "0.15"
tera = "1.5"
serde_json = "1.0"
cookie = "0.14"
rand = "0.7"
chrono = "0.4"
time = "0.2"
checkmail = "0.1.1"
